fixed names being cut off

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 
 h1 {
   font-size: 3rem;
-  line-height: 1;
+  line-height: 1.2;
   text-align: center;
   margin-bottom: 1rem;
   background: var(--color-primary-gradient);
